--- a/client/src/components/NavBar/SearchBar/SearchBar.module.css
+++ b/client/src/components/NavBar/SearchBar/SearchBar.module.css
@@ -15,7 +15,7 @@ border: none;
 top: 0px;
 border-radius: 0; 
 border: none;
-background-color: #e48b07;
+background-color: #ff6600;
 background-image: url("../../../sources/search.png");
 background-repeat: no-repeat;
 background-position: 2px  ;
