--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     background-color: rgb(255, 255, 255);
-    border: solid .5mm gray; 
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.39);
     width: 360px;
     height: 400px;
     
@@ -24,26 +24,24 @@
 
 .name{
     position: relative;
-    top: -25px;
+    font-size:xx-large;
+    top: -20px;
+    color: rgb(221, 151, 47);
+
 }
 
-.diets{
-    position: relative;
-    top: -50px; 
-}
+
 .link{
     text-decoration: none;
     color:black;
 }
 .hs{
-    position: absolute;
-    top: -18px;
-    right: 2px;
+    position: relative;
+    font-size: medium;
     z-index: 10;
-    color: rgb(44, 44, 44);
-    border-radius: 50%;
-    background-color: rgba(255, 166, 0, 0.918);
-    box-shadow: 5px black;
-    padding: 10px;
+    top: -10px;
+    color: rgba(48, 48, 48, 0.856);
+    
+    
 
 }
