--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -9,7 +9,7 @@
     width: 100%;
     min-height: 80px;
     
-    background-color: #ffa31a;
+    background-color: #000000;
     top: 0%;
     z-index: 2;
     
@@ -47,7 +47,7 @@
     
 }
 
-@media (max-width:1500px){
+@media (max-width:1700px){
     
     .create {
         
