--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -1,30 +1,38 @@
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap);
 
 .bigContainer{
-
+border: solid green;
+height: 100vh;
+width: 100vw;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 .container{
+    border: solid red;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     font-family:'Roboto';
     background-color: rgb(250, 250, 250);
     
-    background-repeat: no-repeat;
-    background-position-x: 100%;
     width: 60vw;
     height: 35vw;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39)
 }
 
 .form{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
     background-color: rgb(250, 250, 250);
-    margin-left: 180px;
+    
     width: 30vw;
     height: 70%;
-    padding: 20px 20px;
+    
     
     
 }
@@ -38,28 +46,23 @@
 .inputBox{
    display: flex;
    flex-wrap: wrap;
-   width: 40%; 
-   padding-bottom: 30px;
+   
 }
 
 .inputBox input{
-    height:35px ;
-    width: 95%;
+    
     border-radius: 5px;
     border: solid 1px rgb(206, 206, 206);
 }
 
 .inputBox textarea{
-    height:35px ;
-    width: 95%;
+    
     border-radius: 5px;
     border: solid 1px rgb(206, 206, 206);
 }
 
 .inputBox label{
-    position: relative;
-    text-align: start;
-    width: 95%;
+    
     font-size: 20px;
     font-weight: bold;
     
@@ -67,72 +70,27 @@
 
 .title{
   position: relative;  
-  left: -9%;
-  top: 2%;
+ 
   font-weight: bold;
 }
 
 .select{
-    width: 224px;
-    top: -12%;
-    left: .4%;
-    height: 30px ;
+   
     z-index: 5;
 }
-/* 
-.summary{
-    position: relative;
-    top: -30%;
-}
-
-.summaryInput{
-    position: relative;
-    top: -30%;
-    width: 100%;
-}
-
-.steps{
-    position: relative;
-    top: -30%;
-}
-
-.stepsInput{
-    position: relative;
-    top: -30%;
-    width: 100%;
-}
-
-.image{
-    position: relative;
-    top: -60%; 
-}
-
-.imageInput{
-    position: relative;
-    top: -60%; 
-}
-
-.diets{
-    position: relative;
-    top: -60%;  
-} */
 
 .errors{
-    position: relative;
-    top: 5%;
+    
     color: red;
 
 }
 
 .btn{
-    position: absolute;
-    left: 43%;
-    top: 75%;
+    
 }
 
 .btnCreateDisabled{
-    position: absolute;
-    left: 43%;
-    top: 75%;
+    
+    
     background-color: gray;
 }
