--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -1,15 +1,20 @@
 .Container{
-    display: grid;
-    grid-template-columns: max-content;
-    justify-content: space-around;
-  
-    
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(223, 223, 223, 0.349);
+    border: solid red;
    overflow: scroll;
    
-  
-   height: 80%;
+   overflow-x: hidden;
+   height: 100vh;
    
-   padding-bottom: 500px;
+   
+  min-height: 100vh;
+   
+  margin-bottom: 200px;
+  
 
    
  
@@ -19,7 +24,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(10rem,15rem));
     grid-gap: 20px;
-    background-color: rgba(117, 185, 187, 0.219);
+    background-color: rgba(117, 185, 187, 0);
     justify-content:center;
     align-items: center;
     
@@ -28,17 +33,13 @@ height: 70px;
 
 top: 80px;
 z-index: 5;
-
-
-    
-    margin-bottom: -50px;
+ 
     
 }
 
-.cards {
-    margin: 0 auto;
+.paginationContainer{
     position: relative;
-    top: 150px;
-    width: 100vw;
+    bottom: -250px;
+    margin-bottom: 100px;
 }
 
