--- a/client/src/views/LandingPage/LandingPage.module.css
+++ b/client/src/views/LandingPage/LandingPage.module.css
@@ -1,22 +1,33 @@
 .start{
   position: relative;
-  z-index: 2;
+ top: 45%;
+  z-index: 5;
 }
 
-/* video {
+.container {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  
+ 
+  
+}
+
+video {
   position: absolute;
   top: 0 ;
  left: 0;
- width: 100%;
- height: 100%;
+ width: 100vw;
+ height: 100vh;
  object-fit: cover;
-} */
+}
 
 button{
   font-family:Arial, Helvetica, sans-serif;
   font-size:larger;
   position: relative;
-  top: 20px;
+top: 40%;
   z-index: 2;
   color: white;
   height: 50px;
@@ -25,11 +36,12 @@ button{
   border: none;
 }
 
-/* @media (max-width:700px){
+@media (max-width:700px){
   .start{
+    
       width: 300px;
   }
-} */
+}
 
 
   
