--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -36,7 +36,7 @@
 }
 .create {
     display: flex;
-    background-color: rgb(159, 199, 186);
+    background-color: #5f44d6;
     border: solid .6mm white;
     color: white;
     text-decoration: none;
