--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -36,7 +36,7 @@
 .active {
     font-family: "Poppins", sans-serif;
     font-size: large;
-    background-color: #ff6600;
+    background-color: #6243ec;
     border-radius: 0.2rem;
     border:solid grey 1px;
     color: #ffffff;
@@ -50,7 +50,7 @@
 }
 
 .page:hover{
-    background-color: #ff6600;
+    background-color: #6243ec;
     
     transform: scale(1.1);
 }
@@ -58,11 +58,11 @@
 .Previous {
     font-family: "Poppins", sans-serif;
     font-size: large;
-    
-    color: white;
-    padding: 0.5rem 1rem;
-	background-color: #ff6600;
-    border: none;
+    cursor: pointer;
+    background: none;
+	width: 20px;
+    color: #6243ec;
+   
     
 	
 	transition: all 200ms ease;
@@ -71,13 +71,11 @@
 }
 
 .disPrevious {
-    font-family: "Poppins", sans-serif;
     font-size: large;
     
-    color: rgb(255, 255, 255);
-    padding: 0.5rem 1rem;
-	background-color: rgb(192, 192, 192);
-    border: none;
+    color: rgba(105, 105, 105, 0.342);
+    background: none;
+	width: 20px;
     
 	
 	transition: all 200ms ease;
@@ -87,29 +85,24 @@
 
 .Next {
     
-    font-family: "Poppins", sans-serif;
     font-size: large;
-    width: 88px;
-    color: white;
-    padding: 0.5rem 1rem;
-	background-color: #ff6600;
-    border: none;
-    right: 20%;
-	
+    
+    color: #6243ec;
+   cursor: pointer;
+   background: none;
+	width: 20px;
 	transition: all 200ms ease;
+    
     
 }
 
 .disNext {
     
-    font-family: "Poppins", sans-serif;
+   
     font-size: large;
-    padding: 10;
-    color: rgb(255, 255, 255);
-    padding: 0.5rem 1rem;
-	background-color: rgb(192, 192, 192);
-    border: none;
-    right: 20%;
+    color: rgba(105, 105, 105, 0.342);
+    background: none;
+	width: 20px;
 	
 	transition: all 200ms ease;
     
@@ -119,12 +112,12 @@
 
 	
 	.Right:hover {
-		background-color: #ff6600;
+		font-weight: 600;
 		
       
 	}
 	
 	
     .Left:hover {
-		background-color: #ff6600;
+		font-weight: 600;
 	}
