--- a/client/src/views/Form/Form.module.css
+++ b/client/src/views/Form/Form.module.css
@@ -1,41 +1,34 @@
-
-
 .bigContainer{
-
-height: 100vh;
-width: 100vw;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: rgba(203, 214, 228, 0.349);
+    overflow: scroll;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: rgba(203, 214, 228, 0.349);
 }
 
 .container{
-   
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
     
     background-color: rgb(250, 250, 250);
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20vh;
     width: 40vw;
-    height: 35vw;
+    height:fit-content;
+    padding: 50px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39)
 }
 
 .form{
     display: grid;
-    grid-template-columns: auto auto;
-    justify-content: space-evenly;
-    background-color: rgb(250, 250, 250);
     gap: 20px;
-    width: 30vw;
-    height: 70%;
-    
-    
+    height: 100%;
+    width: 80%;
     
 }
 
@@ -53,7 +46,7 @@ background-color: rgba(203, 214, 228, 0.349);
 }
 
 .difficulty input{
-    width: 250px;
+    width: 100%;
 }
 
 .duration {
@@ -63,7 +56,8 @@ background-color: rgba(203, 214, 228, 0.349);
 }
 
 .duration input{
-    width: 250px;
+    width: 100%;
+    border: solid red;
 }
 
 .form label{
@@ -88,6 +82,7 @@ background-color: rgba(203, 214, 228, 0.349);
 .select{
    
     z-index: 5;
+    height: 50px;
 }
 
 .errors{
@@ -96,15 +91,50 @@ background-color: rgba(203, 214, 228, 0.349);
 
 }
 
+
+
+.countriesSelected{
+    border: 1px solid rgba(150, 150, 150, 0.438);
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    padding: 5px;
+    max-height: 100px;
+    overflow: scroll;
+    flex-direction: column;
+    align-items: start;
+}
+
+.countselect{
+    position: relative;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.x{
+    position: relative;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 100%;
+    width: 20px;
+    height: 20px;
+    right: 10px;
+    color: red;
+    background: none;
+    cursor: pointer;
+}
+
 .btn{
     position: relative;
-    left: 90%;
+   width: 100%;
+   grid-column: 1/3;
 }
 
 .btnCreateDisabled{
     position: relative;
-    left: 90%;
-    bottom: 500px;
-    
+    width: 100%;
+    grid-column: 1/3;
     background-color: gray;
 }
